tests/src/frontend/syntax/invalid/nested_module_confusion.sk
module A;

const i : Int = 112;

module B;

const j : Int = 42;

module end;

module end;


fun foo(): Int {
  A.i + A.B.i
}
